--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ a {
   text-decoration: none;
   color: #999;
 }
+
+a.about-me-links {
+  text-decoration: none;
+  color: green;
+  }
 a:hover {
   color: #6633ff;
 }
@@ -55,13 +60,22 @@ a:hover {
   color: white
 }
 
-header {
+header.header-home {
   text-align: center;
   background: url('images/amsterdam2.jpg') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
 }
+
+header.aboutme {
+  text-align: center;
+  background: url('images/aboutme.png') no-repeat top center ;
+  background-size: cover;
+  overflow: hidden;
+  padding-top: 60px;
+}
+
 header {
   line-height: 1.5;
 }
